x86: Add config options to assign versions in the PE-COFF header
This commit adds the new config options to allow the user to modify the
following fields in the PE-COFF header.

UINT16 MajorOperatingSystemVersion
UINT16 MinorOperatingSystemVersion
UINT16 MajorImageVersion
UINT16 MinorImageVersion

Those fields are mainly for the executables or libraries in Windows NT
or higher to specify the minimum supported Windows version and the
version of the image itself.

Given the fact that those fields are ignored in UEFI, we can reuse those
fields for other purposes.

For SUSE Linux Enterprise, we will use them for "Security Version".

The idea of "Security Version" is to maintain a white list of the version
of the latest known secure kernel and to show a warning when loading an
insecure kernel.

First, we redefine those fields in the PE-COFF header:

* Signer Name: MajorOperatingSystemVersion + MinorOperatingSystemVersion
* Distro Version: MajorImageVersion
* Security Version: MinorImageVersion

The "Signer Name" is treated as a 4-bytes char array, while Distro
Version and Security Version are still UINT16.

For example, we can use this to represent the SLE-12-SP2 kernel with
security version 0:

* Signer Name: 'S''U''S''E'
* Distro Version: 0x1202
* Security Version: 0

Then, we will keep the white list in SVList, a UEFI BS+NV variable. The
elements in the list are stored in this way:

  [Signer 1][Distro version 1 ][Security version 1 ][Distro version 2][Security version 2]
  [Signer 2][Distro version 1'][Security version 1']
  ...

SVList will be mirrored into SVListRT, a RT volatile variable.
By design, the security versions in SVList only can be incremented
monotonically or a warning will show up to notify the user.

When grub2 uses shim protocol to verify the kernel, shim will match the
signer and distro version. Only the kernel with the higher or equal
security version can be booted.

There are a few ways to update SVList:

1. When SVList doesn't exist, shim create

--- a/arch/x86/boot/Makefile
+++ b/arch/x86/boot/Makefile
@@ -76,8 +76,18 @@ quiet_cmd_image = BUILD   $@
 cmd_image = $(obj)/tools/build $(obj)/setup.bin $(obj)/vmlinux.bin \
 			       $(obj)/zoffset.h $@
 
+cmd_efiversion = scripts/efiversion.pl \
+			--major-os=$(CONFIG_EFI_MAJOR_OS_VERSION) \
+			--minor-os=$(CONFIG_EFI_MINOR_OS_VERSION) \
+			--major-image=$(CONFIG_EFI_MAJOR_IMAGE_VERSION) \
+			--minor-image=$(CONFIG_EFI_MINOR_IMAGE_VERSION) \
+			$@
+
 $(obj)/bzImage: $(obj)/setup.bin $(obj)/vmlinux.bin $(obj)/tools/build FORCE
 	$(call if_changed,image)
+ifeq ($(CONFIG_EFI_STUB),y)
+	$(call if_changed,efiversion,$@)
+endif
 	@echo 'Kernel: $@ is ready' ' (#'`cat .version`')'
 
 OBJCOPYFLAGS_vmlinux.bin := -O binary -R .note -R .comment -S
